# tensor-instruct

./: .gitignore  BUILD.md  README.md  pyproject.toml
data/: _sources.py
docs/: llm_overview.md
instruct/: __init__.py  _dataset.py  _result.py
tensor/: __init__.py
tensor/instruct/: _callback.py  _config.py  _dataset.py  _instruct.py
tensor/instruct/data/: __init__.py  _mix.py
testing/: instruct.py  run_model.py
